test/expected/explain_la_tsts.out
explain [this,this]
              ^
15: error: "this" previously captured
